--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=xenmesh_rest
+DB_DATABASE=xen_res
 DB_USERNAME=root
 DB_PASSWORD=
 
