--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
+    "chart.js": "^4.4.0",
+    "v-wave": "^1.5.1",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
