--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port=3000",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@animxyz/vue3": "^0.6.7",
     "@heroicons/vue": "^2.0.18",
     "chart.js": "^4.4.0",
     "v-wave": "^1.5.1",
