--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@animxyz/vue3": "^0.6.7",
     "@heroicons/vue": "^2.0.18",
+    "@vueuse/core": "^10.5.0",
     "chart.js": "^4.4.0",
     "v-wave": "^1.5.1",
     "vue": "^3.3.4",
