--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
+    "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
