--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite --port=3000",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test":"vitest"
   },
   "dependencies": {
     "@animxyz/vue3": "^0.6.7",
@@ -30,6 +31,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^0.34.6"
   }
 }
