--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --port=3000",
     "build": "vite build",
     "preview": "vite preview",
-    "test":"vitest"
+    "test": "vitest"
   },
   "dependencies": {
     "@animxyz/vue3": "^0.6.7",
@@ -30,6 +30,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "prettier": "3.1.0",
     "tailwindcss": "^3.3.5",
     "vite": "^4.4.5",
     "vitest": "^0.34.6"
