surjopay succes is generated

--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,19 @@
-# bkash app initilised
 
-BAKSH_SANDBOX_BASE_URL="";
+#surjopay sandbox start
+SURJOPAY_SANDBOX_BASE_URL ='https://sandbox.shurjopayment.com/api'
+SURJO_USER_NAME="sp_sandbox"
+SURJO_PASSCODE ="pyyk97hu&6u6"
+SURJO_PREFIX ="sp"
+SURJO_RETURN_URL ="https://www.sandbox.shurjopayment.com/response"
+SURJO_CANCEL_URL = "https://www.sandbox.shurjopayment.com/respons"
+SURJO_DEFAULT_PHONE ="01236547896"
+SURJO_DEFAULT_EMAIL ="tnet1234@gmail.com"
+SURJO_CURRENCY ="BDT"
+SURJO_CITY="Dhaka"
+SURJO_DISTRICT="Kustia"
+SURJO_THANA="Kumarkhali"
+SURJO_ROADNO=5
+SURJO_CUSTOMER_NAME="Xennifer"
+
+
+#surjopay sanbox end
