--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "@heroicons/vue": "^2.0.18",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pinia": "^2.1.7",
