--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "formate": "yarn prettier . --write"
   },
   "dependencies": {
-    "@animxyz/vue3": "^0.6.7",
     "@formkit/vue": "^1.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
@@ -20,6 +19,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
+    "animejs": "^3.2.2",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
