data crud in table is applied fixed height of their table and data crud operation function are also defined

--- a/.env
+++ b/.env
@@ -16,4 +16,8 @@ SURJO_ROADNO=5
 SURJO_CUSTOMER_NAME="Xennifer"
 
 
+#application api#
+applicationAdminBaseUrl ="http://127.0.0.1:8000/api/admin",
+applicationClientBaseUrl ="http://127.0.0.1:8000/api",
+
 #surjopay sanbox end
