--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "formate": "yarn prettier . --write",
-    // "compose":"npx tailwindcss -i ./src/assets/tailwind.css -o ./src/assets/compilecss.css --watch"
+    "compose":"npx tailwindcss -i ./src/assets/tailwind.css -o ./src/assets/compilecss.css --watch"
   },
   "dependencies": {
     "@formkit/vue": "^1.3.0",
